syntax = "proto3";

message Schema1 {
	string name = 1;
  
  message Nested {
    message DoubleNested {
    }
  }
}
